tests/negative/Termination/Data/Bool.juvix
module Data.Bool;

type Bool :=
  | true : Bool
  | false : Bool;

syntax infixr 2 ||;

|| : Bool → Bool → Bool
  | false a := a
  | true _ := true;

syntax infixr 2 &&;

&& : Bool → Bool → Bool
  | false _ := false
  | true a := a;

ite : (a : Type) → Bool → a → a → a
  | _ true a _ := a
  | _ false _ b := b;

not : Bool → Bool
  | true := false
  | false := true;
